# pokespearify

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs  telemetry.rs
src/api_clients/: mod.rs  pokeapi.rs  shakespeare.rs
src/routes/: mod.rs  pokemon.rs
testdata/: charizard_single_text.json  charizard_single_translation.json  pikachu.json  shakespeare.json
tests/: endpoints.rs  setup.rs
