[package]
name = "pokespearify"
version = "0.1.0"
authors = ["Seb"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pokespeare"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["net", "macros", "rt"] }
