[package]
name = "pokespearify"
version = "0.1.0"
authors = ["Seb"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pokespeare"

[dependencies]
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
anyhow = "1"
config = { version = "0.11", default-features = false, features = ["yaml"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2"
tracing-log = "0.1.1"
tracing-actix-web = "0.3.0-beta.2"
url = "2"

[dev-dependencies]
actix-rt = "2.2.0"
lazy_static = "1"
wiremock = "0.5"
tokio = { version = "1", features = ["net", "macros", "rt"] }